--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   	"mocha" : "*",
   	"chai" : "*",
   	"sinon" : "*",
-  	"sinon-chai" : "*"
+  	"sinon-chai" : "*",
+    "connect" : "*"
   }
 }
